deploy/base/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
